--- a/formularz.html
+++ b/formularz.html
@@ -10,7 +10,7 @@
 <body>
     <nav class="nav"> 
         <ul>
-          <li class="nav-item class"><a href="P1.html">Strona główna</a></li>
+          <li class="nav-item class"><a href="index.html">Strona główna</a></li>
           <li class="nav-item class"><a href="podstrona2.html">Podstrona </a></li>
         </ul>
         </nav>
